--- a/style.css
+++ b/style.css
@@ -23,3 +23,11 @@ section {
     line-height: 100px;
     font-size: 60px;
 }
+
+.bgcolor{
+    background-color: brown;
+}
+
+.hide{
+    display: none;
+}
